src/models/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASO
    MOD

Grammar

Rule 0     S' -> algoritmo
Rule 1     algoritmo -> FUN proposicion proposiciones FFUN
Rule 2     empty -> <empty>
Rule 3     proposicion -> asignacion PCOMA
Rule 4     proposicion -> inicializar_variable PCOMA
Rule 5     proposicion -> sentencia_si PCOMA
Rule 6     proposicion -> sentencia_mientras PCOMA
Rule 7     proposicion -> sentencia_hacer_mientras PCOMA
Rule 8     proposicion -> sentencia_leer PCOMA
Rule 9     proposicion -> sentencia_escribir PCOMA
Rule 10    proposiciones -> proposicion proposiciones
Rule 11    proposiciones -> empty
Rule 12    asignacion -> ID ASIGNAR ID
Rule 13    asignacion -> ID ASIGNAR exp_aritmetica
Rule 14    asignacion -> ID ASIGNAR exp_booleana
Rule 15    asignacion -> ID ASIGNAR NULO
Rule 16    asignacion -> ID ASIGNAR VALOR_CADENA
Rule 17    tipos -> ENTERO
Rule 18    tipos -> BOOLEANO
Rule 19    tipos -> DECIMAL
Rule 20    tipos -> CADENA
Rule 21    inicializar_variable -> VAR ID COLON tipos
Rule 22    factor_aritmetico -> NUM_ENTERO
Rule 23    factor_aritmetico -> NUM_DECIMAL
Rule 24    termino_aritmetico -> LPAREN termino_aritmetico RPAREN
Rule 25    termino_aritmetico -> termino_aritmetico POTENCIA termino_aritmetico
Rule 26    termino_aritmetico -> termino_aritmetico MULT termino_aritmetico
Rule 27    termino_aritmetico -> termino_aritmetico DIV termino_aritmetico
Rule 28    termino_aritmetico -> termino_aritmetico SUMA termino_aritmetico
Rule 29    termino_aritmetico -> termino_aritmetico RESTA termino_aritmetico
Rule 30    termino_aritmetico -> factor_aritmetico
Rule 31    exp_aritmetica -> termino_aritmetico
Rule 32    operador_relacional -> IGUAL
Rule 33    operador_relacional -> DIFERENTE
Rule 34    operador_relacional -> LEQ
Rule 35    operador_relacional -> GEQ
Rule 36    operador_relacional -> MENOR
Rule 37    operador_relacional -> MAYOR
Rule 38    factor_relacional -> LPAREN factor_relacional RPAREN
Rule 39    factor_relacional -> exp_aritmetica operador_relacional exp_aritmetica
Rule 40    factor_relacional -> ID operador_relacional exp_aritmetica
Rule 41    factor_relacional -> exp_aritmetica operador_relacional ID
Rule 42    factor_relacional -> ID operador_relacional ID
Rule 43    operador_booleano -> IGUAL
Rule 44    operador_booleano -> DIFERENTE
Rule 45    operador_booleano -> Y
Rule 46    operador_booleano -> O
Rule 47    factor_booleano -> LPAREN exp_booleana RPAREN
Rule 48    factor_booleano -> VERDADERO
Rule 49    factor_booleano -> FALSO
Rule 50    factor_booleano -> factor_relacional
Rule 51    factor_booleano -> NEGAR factor_booleano
Rule 52    factor_booleano_id -> factor_booleano
Rule 53    factor_booleano_id -> ID
Rule 54    factor_booleano_id -> NEGAR ID
Rule 55    operaciones_booleanas -> operador_booleano factor_booleano operaciones_booleanas
Rule 56    operaciones_booleanas -> empty
Rule 57    operaciones_booleanas_id -> operador_booleano factor_booleano_id operaciones_booleanas_id
Rule 58    operaciones_booleanas_id -> empty
Rule 59    termino_booleano -> factor_booleano operaciones_booleanas
Rule 60    termino_booleano -> ID operador_booleano factor_booleano_id operaciones_booleanas_id
Rule 61    termino_booleano -> NEGAR ID operaciones_booleanas_id
Rule 62    exp_booleana -> termino_booleano
Rule 63    exp_booleana -> termino_booleano operador_booleano exp_booleana
Rule 64    sentencia_si -> SI exp_booleana ENTONCES proposicion proposiciones FSI
Rule 65    sentencia_si -> SI exp_booleana ENTONCES proposicion proposiciones SINO proposicion proposiciones FSI
Rule 66    sentencia_mientras -> MIENTRAS exp_booleana HACER proposicion proposiciones FMIENTRAS
Rule 67    sentencia_hacer_mientras -> HACER proposicion proposiciones MIENTRAS exp_booleana
Rule 68    sentencia_leer -> LEER LPAREN ID RPAREN
Rule 69    sentencia_escribir -> ESCRIBIR LPAREN ID RPAREN

Terminals, with rules where they appear

ASIGNAR              : 12 13 14 15 16
BOOLEANO             : 18
CADENA               : 20
CASO                 : 
COLON                : 21
DECIMAL              : 19
DIFERENTE            : 33 44
DIV                  : 27
ENTERO               : 17
ENTONCES             : 64 65
ESCRIBIR             : 69
FALSO                : 49
FFUN                 : 1
FMIENTRAS            : 66
FSI                  : 64 65
FUN                  : 1
GEQ                  : 35
HACER                : 66 67
ID                   : 12 12 13 14 15 16 21 40 41 42 42 53 54 60 61 68 69
IGUAL                : 32 43
LEER                 : 68
LEQ                  : 34
LPAREN               : 24 38 47 68 69
MAYOR                : 37
MENOR                : 36
MIENTRAS             : 66 67
MOD                  : 
MULT                 : 26
NEGAR                : 51 54 61
NULO                 : 15
NUM_DECIMAL          : 23
NUM_ENTERO           : 22
O                    : 46
PCOMA                : 3 4 5 6 7 8 9
POTENCIA             : 25
RESTA                : 29
RPAREN               : 24 38 47 68 69
SI                   : 64 65
SINO                 : 65
SUMA                 : 28
VALOR_CADENA         : 16
VAR                  : 21
VERDADERO            : 48
Y                    : 45
error                : 

Nonterminals, with rules where they appear

algoritmo            : 0
asignacion           : 3
empty                : 11 56 58
exp_aritmetica       : 13 39 39 40 41
exp_booleana         : 14 47 63 64 65 66 67
factor_aritmetico    : 30
factor_booleano      : 51 52 55 59
factor_booleano_id   : 57 60
factor_relacional    : 38 50
inicializar_variable : 4
operaciones_booleanas : 55 59
operaciones_booleanas_id : 57 60 61
operador_booleano    : 55 57 60 63
operador_relacional  : 39 40 41 42
proposicion          : 1 10 64 65 65 66 67
proposiciones        : 1 10 64 65 65 66 67
sentencia_escribir   : 9
sentencia_hacer_mientras : 7
sentencia_leer       : 8
sentencia_mientras   : 6
sentencia_si         : 5
termino_aritmetico   : 24 25 25 26 26 27 27 28 28 29 29 31
termino_booleano     : 62 63
tipos                : 21

Parsing method: LALR

state 0

    (0) S' -> . algoritmo
    (1) algoritmo -> . FUN proposicion proposiciones FFUN

    FUN             shift and go to state 2

    algoritmo                      shift and go to state 1

state 1

    (0) S' -> algoritmo .



state 2

    (1) algoritmo -> FUN . proposicion proposiciones FFUN
    (3) proposicion -> . asignacion PCOMA
    (4) proposicion -> . inicializar_variable PCOMA
    (5) proposicion -> . sentencia_si PCOMA
    (6) proposicion -> . sentencia_mientras PCOMA
    (7) proposicion -> . sentencia_hacer_mientras PCOMA
    (8) proposicion -> . sentencia_leer PCOMA
    (9) proposicion -> . sentencia_escribir PCOMA
    (12) asignacion -> . ID ASIGNAR ID
    (13) asignacion -> . ID ASIGNAR exp_aritmetica
    (14) asignacion -> . ID ASIGNAR exp_booleana
    (15) asignacion -> . ID ASIGNAR NULO
    (16) asignacion -> . ID ASIGNAR VALOR_CADENA
    (21) inicializar_variable -> . VAR ID COLON tipos
    (64) sentencia_si -> . SI exp_booleana ENTONCES proposicion proposiciones FSI
    (65) sentencia_si -> . SI exp_booleana ENTONCES proposicion proposiciones SINO proposicion proposiciones FSI
    (66) sentencia_mientras -> . MIENTRAS exp_booleana HACER proposicion proposiciones FMIENTRAS
    (67) sentencia_hacer_mientras -> . HACER proposicion proposiciones MIENTRAS exp_booleana
    (68) sentencia_leer -> . LEER LPAREN ID RPAREN
    (69) sentencia_escribir -> . ESCRIBIR LPAREN ID RPAREN

    ID              shift and go to state 11
    VAR             shift and go to state 12
    SI              shift and go to state 13
    MIENTRAS        shift and go to state 14
    HACER           shift and go to state 15
    LEER            shift and go to state 16
    ESCRIBIR        shift and go to state 17

    proposicion                    shift and go to state 3
    asignacion                     shift and go to state 4
    inicializar_variable           shift and go to state 5
    sentencia_si                   shift and go to state 6
    sentencia_mientras             shift and go to state 7
    sentencia_hacer_mientras       shift and go to state 8
    sentencia_leer                 shift and go to state 9
    sentencia_escribir             shift and go to state 10

state 3

    (1) algoritmo -> FUN proposicion . proposiciones FFUN
    (10) proposiciones -> . proposicion proposiciones
    (11) proposiciones -> . empty
    (3) proposicion -> . asignacion PCOMA
    (4) proposicion -> . inicializar_variable PCOMA
    (5) proposicion -> . sentencia_si PCOMA
    (6) proposicion -> . sentencia_mientras PCOMA
    (7) proposicion -> . sentencia_hacer_mientras PCOMA
    (8) proposicion -> . sentencia_leer PCOMA
    (9) proposicion -> . sentencia_escribir PCOMA
    (2) empty -> .
    (12) asignacion -> . ID ASIGNAR ID
    (13) asignacion -> . ID ASIGNAR exp_aritmetica
    (14) asignacion -> . ID ASIGNAR exp_booleana
    (15) asignacion -> . ID ASIGNAR NULO
    (16) asignacion -> . ID ASIGNAR VALOR_CADENA
    (21) inicializar_variable -> . VAR ID COLON tipos
    (64) sentencia_si -> . SI exp_booleana ENTONCES proposicion proposiciones FSI
    (65) sentencia_si -> . SI exp_booleana ENTONCES proposicion proposiciones SINO proposicion proposiciones FSI
    (66) sentencia_mientras -> . MIENTRAS exp_booleana HACER proposicion proposiciones FMIENTRAS
    (67) sentencia_hacer_mientras -> . HACER proposicion proposiciones MIENTRAS exp_booleana
    (68) sentencia_leer -> . LEER LPAREN ID RPAREN
    (69) sentencia_escribir -> . ESCRIBIR LPAREN ID RPAREN

    FFUN            reduce using rule 2 (empty -> .)
    ID              shift and go to state 11
    VAR             shift and go to state 12
    SI              shift and go to state 13
    MIENTRAS        shift and go to state 14
    HACER           shift and go to state 15
    LEER            shift and go to state 16
    ESCRIBIR        shift and go to state 17

    proposicion                    shift and go to state 18
    proposiciones                  shift and go to state 19
    empty                          shift and go to state 20
    asignacion                     shift and go to state 4
    inicializar_variable           shift and go to state 5
    sentencia_si                   shift and go to state 6
    sentencia_mientras             shift and go to state 7
    sentencia_hacer_mientras       shift and go to state 8
    sentencia_leer                 shift and go to state 9
    sentencia_escribir             shift and go to state 10

state 4

    (3) proposicion -> asignacion . PCOMA

    PCOMA           shift and go to state 21


state 5

    (4) proposicion -> inicializar_variable . PCOMA

    PCOMA           shift and go to state 22


state 6

    (5) proposicion -> sentencia_si . PCOMA

    PCOMA           shift and go to state 23


state 7

    (6) proposicion -> sentencia_mientras . PCOMA

    PCOMA           shift and go to state 24


state 8

    (7) proposicion -> sentencia_hacer_mientras . PCOMA

    PCOMA           shift and go to state 25


state 9

    (8) proposicion -> sentencia_leer . PCOMA

    PCOMA           shift and go to state 26


state 10

    (9) proposicion -> sentencia_escribir . PCOMA

    PCOMA           shift and go to state 27


state 11

    (12) asignacion -> ID . ASIGNAR ID
    (13) asignacion -> ID . ASIGNAR exp_aritmetica
    (14) asignacion -> ID . ASIGNAR exp_booleana
    (15) asignacion -> ID . ASIGNAR NULO
    (16) asignacion -> ID . ASIGNAR VALOR_CADENA

    ASIGNAR         shift and go to state 28


state 12

    (21) inicializar_variable -> VAR . ID COLON tipos

    ID              shift and go to state 29


state 13

    (64) sentencia_si -> SI . exp_booleana ENTONCES proposicion proposiciones FSI
    (65) sentencia_si -> SI . exp_booleana ENTONCES proposicion proposiciones SINO proposicion proposiciones FSI
    (62) exp_booleana -> . termino_booleano
    (63) exp_booleana -> . termino_booleano operador_booleano exp_booleana
    (59) termino_booleano -> . factor_booleano operaciones_booleanas
    (60) termino_booleano -> . ID operador_booleano factor_booleano_id operaciones_booleanas_id
    (61) termino_booleano -> . NEGAR ID operaciones_booleanas_id
    (47) factor_booleano -> . LPAREN exp_booleana RPAREN
    (48) factor_booleano -> . VERDADERO
    (49) factor_booleano -> . FALSO
    (50) factor_booleano -> . factor_relacional
    (51) factor_booleano -> . NEGAR factor_booleano
    (38) factor_relacional -> . LPAREN factor_relacional RPAREN
    (39) factor_relacional -> . exp_aritmetica operador_relacional exp_aritmetica
    (40) factor_relacional -> . ID operador_relacional exp_aritmetica
    (41) factor_relacional -> . exp_aritmetica operador_relacional ID
    (42) factor_relacional -> . ID operador_relacional ID
    (31) exp_aritmetica -> . termino_aritmetico
    (24) termino_aritmetico -> . LPAREN termino_aritmetico RPAREN
    (25) termino_aritmetico -> . termino_aritmetico POTENCIA termino_aritmetico
    (26) termino_aritmetico -> . termino_aritmetico MULT termino_aritmetico
    (27) termino_aritmetico -> . termino_aritmetico DIV termino_aritmetico
    (28) termino_aritmetico -> . termino_aritmetico SUMA termino_aritmetico
    (29) termino_aritmetico -> . termino_aritmetico RESTA termino_aritmetico
    (30) termino_aritmetico -> . factor_aritmetico
    (22) factor_aritmetico -> . NUM_ENTERO
    (23) factor_aritmetico -> . NUM_DECIMAL

    ID              shift and go to state 33
    NEGAR           shift and go to state 34
    LPAREN          shift and go to state 35
    VERDADERO       shift and go to state 36
    FALSO           shift and go to state 37
    NUM_ENTERO      shift and go to state 42
    NUM_DECIMAL     shift and go to state 43

    exp_booleana                   shift and go to state 30
    termino_booleano               shift and go to state 31
    factor_booleano                shift and go to state 32
    factor_relacional              shift and go to state 38
    exp_aritmetica                 shift and go to state 39
    termino_aritmetico             shift and go to state 40
    factor_aritmetico              shift and go to state 41

state 14

    (66) sentencia_mientras -> MIENTRAS . exp_booleana HACER proposicion proposiciones FMIENTRAS
    (62) exp_booleana -> . termino_booleano
    (63) exp_booleana -> . termino_booleano operador_booleano exp_booleana
    (59) termino_booleano -> . factor_booleano operaciones_booleanas
    (60) termino_booleano -> . ID operador_booleano factor_booleano_id operaciones_booleanas_id
    (61) termino_booleano -> . NEGAR ID operaciones_booleanas_id
    (47) factor_booleano -> . LPAREN exp_booleana RPAREN
    (48) factor_booleano -> . VERDADERO
    (49) factor_booleano -> . FALSO
    (50) factor_booleano -> . factor_relacional
    (51) factor_booleano -> . NEGAR factor_booleano
    (38) factor_relacional -> . LPAREN factor_relacional RPAREN
    (39) factor_relacional -> . exp_aritmetica operador_relacional exp_aritmetica
    (40) factor_relacional -> . ID operador_relacional exp_aritmetica
    (41) factor_relacional -> . exp_aritmetica operador_relacional ID
    (42) factor_relacional -> . ID operador_relacional ID
    (31) exp_aritmetica -> . termino_aritmetico
    (24) termino_aritmetico -> . LPAREN termino_aritmetico RPAREN
    (25) termino_aritmetico -> . termino_aritmetico POTENCIA termino_aritmetico
    (26) termino_aritmetico -> . termino_aritmetico MULT termino_aritmetico
    (27) termino_aritmetico -> . termino_aritmetico DIV termino_aritmetico
    (28) termino_aritmetico -> . termino_aritmetico SUMA termino_aritmetico
    (29) termino_aritmetico -> . termino_aritmetico RESTA termino_aritmetico
    (30) termino_aritmetico -> . factor_aritmetico
    (22) factor_aritmetico -> . NUM_ENTERO
    (23) factor_aritmetico -> . NUM_DECIMAL

    ID              shift and go to state 33
    NEGAR           shift and go to state 34
    LPAREN          shift and go to state 35
    VERDADERO       shift and go to state 36
    FALSO           shift and go to state 37
    NUM_ENTERO      shift and go to state 42
    NUM_DECIMAL     shift and go to state 43

    exp_booleana                   shift and go to state 44
    termino_booleano               shift and go to state 31
    factor_booleano                shift and go to state 32
    factor_relacional              shift and go to state 38
    exp_aritmetica                 shift and go to state 39
    termino_aritmetico             shift and go to state 40
    factor_aritmetico              shift and go to state 41

state 15

    (67) sentencia_hacer_mientras -> HACER . proposicion proposiciones MIENTRAS exp_booleana
    (3) proposicion -> . asignacion PCOMA
    (4) proposicion -> . inicializar_variable PCOMA
    (5) proposicion -> . sentencia_si PCOMA
    (6) proposicion -> . sentencia_mientras PCOMA
    (7) proposicion -> . sentencia_hacer_mientras PCOMA
    (8) proposicion -> . sentencia_leer PCOMA
    (9) proposicion -> . sentencia_escribir PCOMA
    (12) asignacion -> . ID ASIGNAR ID
    (13) asignacion -> . ID ASIGNAR exp_aritmetica
    (14) asignacion -> . ID ASIGNAR exp_booleana
    (15) asignacion -> . ID ASIGNAR NULO
    (16) asignacion -> . ID ASIGNAR VALOR_CADENA
    (21) inicializar_variable -> . VAR ID COLON tipos
    (64) sentencia_si -> . SI exp_booleana ENTONCES proposicion proposiciones FSI
    (65) sentencia_si -> . SI exp_booleana ENTONCES proposicion proposiciones SINO proposicion proposiciones FSI
    (66) sentencia_mientras -> . MIENTRAS exp_booleana HACER proposicion proposiciones FMIENTRAS
    (67) sentencia_hacer_mientras -> . HACER proposicion proposiciones MIENTRAS exp_booleana
    (68) sentencia_leer -> . LEER LPAREN ID RPAREN
    (69) sentencia_escribir -> . ESCRIBIR LPAREN ID RPAREN

    ID              shift and go to state 11
    VAR             shift and go to state 12
    SI              shift and go to state 13
    MIENTRAS        shift and go to state 14
    HACER           shift and go to state 15
    LEER            shift and go to state 16
    ESCRIBIR        shift and go to state 17

    proposicion                    shift and go to state 45
    asignacion                     shift and go to state 4
    inicializar_variable           shift and go to state 5
    sentencia_si                   shift and go to state 6
    sentencia_mientras             shift and go to state 7
    sentencia_hacer_mientras       shift and go to state 8
    sentencia_leer                 shift and go to state 9
    sentencia_escribir             shift and go to state 10

state 16

    (68) sentencia_leer -> LEER . LPAREN ID RPAREN

    LPAREN          shift and go to state 46


state 17

    (69) sentencia_escribir -> ESCRIBIR . LPAREN ID RPAREN

    LPAREN          shift and go to state 47


state 18

    (10) proposiciones -> proposicion . proposiciones
    (10) proposiciones -> . proposicion proposiciones
    (11) proposiciones -> . empty
    (3) proposicion -> . asignacion PCOMA
    (4) proposicion -> . inicializar_variable PCOMA
    (5) proposicion -> . sentencia_si PCOMA
    (6) proposicion -> . sentencia_mientras PCOMA
    (7) proposicion -> . sentencia_hacer_mientras PCOMA
    (8) proposicion -> . sentencia_leer PCOMA
    (9) proposicion -> . sentencia_escribir PCOMA
    (2) empty -> .
    (12) asignacion -> . ID ASIGNAR ID
    (13) asignacion -> . ID ASIGNAR exp_aritmetica
    (14) asignacion -> . ID ASIGNAR exp_booleana
    (15) asignacion -> . ID ASIGNAR NULO
    (16) asignacion -> . ID ASIGNAR VALOR_CADENA
    (21) inicializar_variable -> . VAR ID COLON tipos
    (64) sentencia_si -> . SI exp_booleana ENTONCES proposicion proposiciones FSI
    (65) sentencia_si -> . SI exp_booleana ENTONCES proposicion proposiciones SINO proposicion proposiciones FSI
    (66) sentencia_mientras -> . MIENTRAS exp_booleana HACER proposicion proposiciones FMIENTRAS
    (67) sentencia_hacer_mientras -> . HACER proposicion proposiciones MIENTRAS exp_booleana
    (68) sentencia_leer -> . LEER LPAREN ID RPAREN
    (69) sentencia_escribir -> . ESCRIBIR LPAREN ID RPAREN

  ! shift/reduce conflict for MIENTRAS resolved as shift
    FFUN            reduce using rule 2 (empty -> .)
    FSI             reduce using rule 2 (empty -> .)
    SINO            reduce using rule 2 (empty -> .)
    FMIENTRAS       reduce using rule 2 (empty -> .)
    ID              shift and go to state 11
    VAR             shift and go to state 12
    SI              shift and go to state 13
    MIENTRAS        shift and go to state 14
    HACER           shift and go to state 15
    LEER            shift and go to state 16
    ESCRIBIR        shift and go to state 17

  ! MIENTRAS        [ reduce using rule 2 (empty -> .) ]

    proposicion                    shift and go to state 18
    proposiciones                  shift and go to state 48
    empty                          shift and go to state 20
    asignacion                     shift and go to state 4
    inicializar_variable           shift and go to state 5
    sentencia_si                   shift and go to state 6
    sentencia_mientras             shift and go to state 7
    sentencia_hacer_mientras       shift and go to state 8
    sentencia_leer                 shift and go to state 9
    sentencia_escribir             shift and go to state 10

state 19

    (1) algoritmo -> FUN proposicion proposiciones . FFUN

    FFUN            shift and go to state 49


state 20

    (11) proposiciones -> empty .

    FFUN            reduce using rule 11 (proposiciones -> empty .)
    MIENTRAS        reduce using rule 11 (proposiciones -> empty .)
    FSI             reduce using rule 11 (proposiciones -> empty .)
    SINO            reduce using rule 11 (proposiciones -> empty .)
    FMIENTRAS       reduce using rule 11 (proposiciones -> empty .)


state 21

    (3) proposicion -> asignacion PCOMA .

    ID              reduce using rule 3 (proposicion -> asignacion PCOMA .)
    VAR             reduce using rule 3 (proposicion -> asignacion PCOMA .)
    SI              reduce using rule 3 (proposicion -> asignacion PCOMA .)
    MIENTRAS        reduce using rule 3 (proposicion -> asignacion PCOMA .)
    HACER           reduce using rule 3 (proposicion -> asignacion PCOMA .)
    LEER            reduce using rule 3 (proposicion -> asignacion PCOMA .)
    ESCRIBIR        reduce using rule 3 (proposicion -> asignacion PCOMA .)
    FFUN            reduce using rule 3 (proposicion -> asignacion PCOMA .)
    FSI             reduce using rule 3 (proposicion -> asignacion PCOMA .)
    SINO            reduce using rule 3 (proposicion -> asignacion PCOMA .)
    FMIENTRAS       reduce using rule 3 (proposicion -> asignacion PCOMA .)


state 22

    (4) proposicion -> inicializar_variable PCOMA .

    ID              reduce using rule 4 (proposicion -> inicializar_variable PCOMA .)
    VAR             reduce using rule 4 (proposicion -> inicializar_variable PCOMA .)
    SI              reduce using rule 4 (proposicion -> inicializar_variable PCOMA .)
    MIENTRAS        reduce using rule 4 (proposicion -> inicializar_variable PCOMA .)
    HACER           reduce using rule 4 (proposicion -> inicializar_variable PCOMA .)
    LEER            reduce using rule 4 (proposicion -> inicializar_variable PCOMA .)
    ESCRIBIR        reduce using rule 4 (proposicion -> inicializar_variable PCOMA .)
    FFUN            reduce using rule 4 (proposicion -> inicializar_variable PCOMA .)
    FSI             reduce using rule 4 (proposicion -> inicializar_variable PCOMA .)
    SINO            reduce using rule 4 (proposicion -> inicializar_variable PCOMA .)
    FMIENTRAS       reduce using rule 4 (proposicion -> inicializar_variable PCOMA .)


state 23

    (5) proposicion -> sentencia_si PCOMA .

    ID              reduce using rule 5 (proposicion -> sentencia_si PCOMA .)
    VAR             reduce using rule 5 (proposicion -> sentencia_si PCOMA .)
    SI              reduce using rule 5 (proposicion -> sentencia_si PCOMA .)
    MIENTRAS        reduce using rule 5 (proposicion -> sentencia_si PCOMA .)
    HACER           reduce using rule 5 (proposicion -> sentencia_si PCOMA .)
    LEER            reduce using rule 5 (proposicion -> sentencia_si PCOMA .)
    ESCRIBIR        reduce using rule 5 (proposicion -> sentencia_si PCOMA .)
    FFUN            reduce using rule 5 (proposicion -> sentencia_si PCOMA .)
    FSI             reduce using rule 5 (proposicion -> sentencia_si PCOMA .)
    SINO            reduce using rule 5 (proposicion -> sentencia_si PCOMA .)
    FMIENTRAS       reduce using rule 5 (proposicion -> sentencia_si PCOMA .)


state 24

    (6) proposicion -> sentencia_mientras PCOMA .

    ID              reduce using rule 6 (proposicion -> sentencia_mientras PCOMA .)
    VAR             reduce using rule 6 (proposicion -> sentencia_mientras PCOMA .)
    SI              reduce using rule 6 (proposicion -> sentencia_mientras PCOMA .)
    MIENTRAS        reduce using rule 6 (proposicion -> sentencia_mientras PCOMA .)
    HACER           reduce using rule 6 (proposicion -> sentencia_mientras PCOMA .)
    LEER            reduce using rule 6 (proposicion -> sentencia_mientras PCOMA .)
    ESCRIBIR        reduce using rule 6 (proposicion -> sentencia_mientras PCOMA .)
    FFUN            reduce using rule 6 (proposicion -> sentencia_mientras PCOMA .)
    FSI             reduce using rule 6 (proposicion -> sentencia_mientras PCOMA .)
    SINO            reduce using rule 6 (proposicion -> sentencia_mientras PCOMA .)
    FMIENTRAS       reduce using rule 6 (proposicion -> sentencia_mientras PCOMA .)


state 25

    (7) proposicion -> sentencia_hacer_mientras PCOMA .

    ID              reduce using rule 7 (proposicion -> sentencia_hacer_mientras PCOMA .)
    VAR             reduce using rule 7 (proposicion -> sentencia_hacer_mientras PCOMA .)
    SI              reduce using rule 7 (proposicion -> sentencia_hacer_mientras PCOMA .)
    MIENTRAS        reduce using rule 7 (proposicion -> sentencia_hacer_mientras PCOMA .)
    HACER           reduce using rule 7 (proposicion -> sentencia_hacer_mientras PCOMA .)
    LEER            reduce using rule 7 (proposicion -> sentencia_hacer_mientras PCOMA .)
    ESCRIBIR        reduce using rule 7 (proposicion -> sentencia_hacer_mientras PCOMA .)
    FFUN            reduce using rule 7 (proposicion -> sentencia_hacer_mientras PCOMA .)
    FSI             reduce using rule 7 (proposicion -> sentencia_hacer_mientras PCOMA .)
    SINO            reduce using rule 7 (proposicion -> sentencia_hacer_mientras PCOMA .)
    FMIENTRAS       reduce using rule 7 (proposicion -> sentencia_hacer_mientras PCOMA .)


state 26

    (8) proposicion -> sentencia_leer PCOMA .

    ID              reduce using rule 8 (proposicion -> sentencia_leer PCOMA .)
    VAR             reduce using rule 8 (proposicion -> sentencia_leer PCOMA .)
    SI              reduce using rule 8 (proposicion -> sentencia_leer PCOMA .)
    MIENTRAS        reduce using rule 8 (proposicion -> sentencia_leer PCOMA .)
    HACER           reduce using rule 8 (proposicion -> sentencia_leer PCOMA .)
    LEER            reduce using rule 8 (proposicion -> sentencia_leer PCOMA .)
    ESCRIBIR        reduce using rule 8 (proposicion -> sentencia_leer PCOMA .)
    FFUN            reduce using rule 8 (proposicion -> sentencia_leer PCOMA .)
    FSI             reduce using rule 8 (proposicion -> sentencia_leer PCOMA .)
    SINO            reduce using rule 8 (proposicion -> sentencia_leer PCOMA .)
    FMIENTRAS       reduce using rule 8 (proposicion -> sentencia_leer PCOMA .)


state 27

    (9) proposicion -> sentencia_escribir PCOMA .

    ID              reduce using rule 9 (proposicion -> sentencia_escribir PCOMA .)
    VAR             reduce using rule 9 (proposicion -> sentencia_escribir PCOMA .)
    SI              reduce using rule 9 (proposicion -> sentencia_escribir PCOMA .)
    MIENTRAS        reduce using rule 9 (proposicion -> sentencia_escribir PCOMA .)
    HACER           reduce using rule 9 (proposicion -> sentencia_escribir PCOMA .)
    LEER            reduce using rule 9 (proposicion -> sentencia_escribir PCOMA .)
    ESCRIBIR        reduce using rule 9 (proposicion -> sentencia_escribir PCOMA .)
    FFUN            reduce using rule 9 (proposicion -> sentencia_escribir PCOMA .)
    FSI             reduce using rule 9 (proposicion -> sentencia_escribir PCOMA .)
    SINO            reduce using rule 9 (proposicion -> sentencia_escribir PCOMA .)
    FMIENTRAS       reduce using rule 9 (proposicion -> sentencia_escribir PCOMA .)


state 28

    (12) asignacion -> ID ASIGNAR . ID
    (13) asignacion -> ID ASIGNAR . exp_aritmetica
    (14) asignacion -> ID ASIGNAR . exp_booleana
    (15) asignacion -> ID ASIGNAR . NULO
    (16) asignacion -> ID ASIGNAR . VALOR_CADENA
    (31) exp_aritmetica -> . termino_aritmetico
    (62) exp_booleana -> . termino_booleano
    (63) exp_booleana -> . termino_booleano operador_booleano exp_booleana
    (24) termino_aritmetico -> . LPAREN termino_aritmetico RPAREN
    (25) termino_aritmetico -> . termino_aritmetico POTENCIA termino_aritmetico
    (26) termino_aritmetico -> . termino_aritmetico MULT termino_aritmetico
    (27) termino_aritmetico -> . termino_aritmetico DIV termino_aritmetico
    (28) termino_aritmetico -> . termino_aritmetico SUMA termino_aritmetico
    (29) termino_aritmetico -> . termino_aritmetico RESTA termino_aritmetico
    (30) termino_aritmetico -> . factor_aritmetico
    (59) termino_booleano -> . factor_booleano operaciones_booleanas
    (60) termino_booleano -> . ID operador_booleano factor_booleano_id operaciones_booleanas_id
    (61) termino_booleano -> . NEGAR ID operaciones_booleanas_id
    (22) factor_aritmetico -> . NUM_ENTERO
    (23) factor_aritmetico -> . NUM_DECIMAL
    (47) factor_booleano -> . LPAREN exp_booleana RPAREN
    (48) factor_booleano -> . VERDADERO
    (49) factor_booleano -> . FALSO
    (50) factor_booleano -> . factor_relacional
    (51) factor_booleano -> . NEGAR factor_booleano
    (38) factor_relacional -> . LPAREN factor_relacional RPAREN
    (39) factor_relacional -> . exp_aritmetica operador_relacional exp_aritmetica
    (40) factor_relacional -> . ID operador_relacional exp_aritmetica
    (41) factor_relacional -> . exp_aritmetica operador_relacional ID
    (42) factor_relacional -> . ID operador_relacional ID

    ID              shift and go to state 50
    NULO            shift and go to state 53
    VALOR_CADENA    shift and go to state 54
    LPAREN          shift and go to state 55
    NEGAR           shift and go to state 34
    NUM_ENTERO      shift and go to state 42
    NUM_DECIMAL     shift and go to state 43
    VERDADERO       shift and go to state 36
    FALSO           shift and go to state 37

    exp_aritmetica                 shift and go to state 51
    exp_booleana                   shift and go to state 52
    termino_aritmetico             shift and go to state 40
    termino_booleano               shift and go to state 31
    factor_aritmetico              shift and go to state 41
    factor_booleano                shift and go to state 32
    factor_relacional              shift and go to state 38

state 29

    (21) inicializar_variable -> VAR ID . COLON tipos

    COLON           shift and go to state 56


state 30

    (64) sentencia_si -> SI exp_booleana . ENTONCES proposicion proposiciones FSI
    (65) sentencia_si -> SI exp_booleana . ENTONCES proposicion proposiciones SINO proposicion proposiciones FSI

    ENTONCES        shift and go to state 57


state 31

    (62) exp_booleana -> termino_booleano .
    (63) exp_booleana -> termino_booleano . operador_booleano exp_booleana
    (43) operador_booleano -> . IGUAL
    (44) operador_booleano -> . DIFERENTE
    (45) operador_booleano -> . Y
    (46) operador_booleano -> . O

    ENTONCES        reduce using rule 62 (exp_booleana -> termino_booleano .)
    HACER           reduce using rule 62 (exp_booleana -> termino_booleano .)
    PCOMA           reduce using rule 62 (exp_booleana -> termino_booleano .)
    RPAREN          reduce using rule 62 (exp_booleana -> termino_booleano .)
    IGUAL           shift and go to state 59
    DIFERENTE       shift and go to state 60
    Y               shift and go to state 61
    O               shift and go to state 62

    operador_booleano              shift and go to state 58

state 32

    (59) termino_booleano -> factor_booleano . operaciones_booleanas
    (55) operaciones_booleanas -> . operador_booleano factor_booleano operaciones_booleanas
    (56) operaciones_booleanas -> . empty
    (43) operador_booleano -> . IGUAL
    (44) operador_booleano -> . DIFERENTE
    (45) operador_booleano -> . Y
    (46) operador_booleano -> . O
    (2) empty -> .
